export interface Class {
    id: number;
    code: string;
    name: string;
}