export interface Course {
    id: number;
    code: string;
    name: string;
    sks: number;
    duration: number;
    lectureID: any;
}
