export interface Room {
    id: number
    code: string
    name: string
    capacity: string
    location: string
}