export interface Timeslot {
    id: number;
    day: string;
    starTime: string;
    endTime: string;
}